# Browsor

./: .gitignore  Cargo.toml  README.md  browser-selector-rt.exe.manifest  browser-selector-rt.rc  build.rs  test.db
assets/doc/: roadmap.md
assets/doc/r&d/: automated-testing-on-windows.md  implementations.md  winrt-dialogs.md  winrt-image-from-icon.md
bindings/: Cargo.toml  build.rs  playground.rs
bindings/src/: lib.rs
scripts/windows/: install.ps1  install.reg.tpl  readme.txt  remove.reg.tpl  setup.ps1  unsupported-command.ps1
src/: conf.rs  desktop_window_xaml_source.rs  error.rs  initialize_with_window.rs  main.rs  main.xaml  os_browsers.rs  ui.rs  util.rs
src/data/: conf.schema.yaml  migrations.rs  mod.rs  statistics_repository.rs  thread_worker.rs
src/os/: mod.rs  shared.rs  util.rs
src/os/macos/: sys_browsers.rs  util.rs
src/os/win/: mod.rs  sys_browsers.rs  util.rs
src/os_util/: mod.rs  windows.rs  windows_browsers.rs  windows_util.rs
src/ui/: ev_loop.rs  macos.rs  mod.rs  ui_windows.rs  win.rs  windows_desktop_window_xaml_source.rs  windows_ui.rs
