[package]
name = "browser-selector"
version = "0.2.0"
authors = ["Alex Culea <16594531+alexculea@users.noreply.github.com>"]
edition = "2021"

[dependencies]
winit = "0.26.1"
winrt = "0.7.0"
winapi = { version = "0.3.9", features = ["winuser", "roapi", "winver", "shellapi", "winnls", "stringapiset", "shlobj", "knownfolders"] }
bindings = { path = "bindings" }
raw-window-handle = "0.4.3"
winreg = { version = '0.9.0', features = ["transactions"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.83"
jsonschema = "0.16.0"
anyhow = "1.0.65"


[build-dependencies]
embed-resource = "1.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1