[package]
name = "bindings"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
windows = "0.43.0"

[build-dependencies]
windows-bindgen = "0.43.0"
windows-metadata = "0.43.0"

# Turn these on to debug the build script
# then run cargo build --bin force-build
# [[bin]]
# name = "force-build"
# path = "build.rs"

# [dependencies]
# windows-bindgen = "0.43.0"
# windows-metadata = "0.43.0"
# windows = "0.43.0"